Fix alignment of bullets on Android

--- a/ArticleTemplates/css/style.css
+++ b/ArticleTemplates/css/style.css
@@ -1838,6 +1838,7 @@ aside {
 
 .bullet {
   color: transparent;
+  vertical-align: middle;
   margin-right: -0.25em;
   width: 1.111em;
   display: inline-block;
